# cosmos

./: .gitignore  .ruff.toml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mkdocs.yml  mypy.ini  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  config.yml  feature_request.yml  tech_debt.yml
.github/workflows/: ci.yml  docs.yml  labels.yml  project-auto.yml  publish.yml
cosmos/: __init__.py  __main__.py
cosmos/cli/: cosmos_app.py  crop_cli.py  ingest_cli.py  io.py  lineage_cli.py  optimize_cli.py  provenance_cli.py
cosmos/crop/: curated_views.py  jobs.py  rectcrop.py  squarecrop.py
cosmos/ffmpeg/: __init__.py  args.py  bootstrap.py  detect.py  presets.py
cosmos/ingest/: adapter.py  manifest.py  preflight.py  processor.py  validation.py
cosmos/preview/: __init__.py  contracts.py  frames.py  pipeline.py  planner.py  render.py  selectors.py
cosmos/sdk/: __init__.py  crop.py  ingest.py  lineage.py  optimize.py  preview.py  profiles.py  provenance.py
cosmos/utils/: config.py  io.py  logging.py
docs/: agent-skill.md  cosmos-cli.md  crop-reference.md  crop-user-guide.md  encoder-behavior.md  index.md  ingest-reference.md  ingest-user-guide.md  input-structure.md  lineage.md  provenance.md  sdk.md  squarecrop-cli.md  squarecrop-reference.md  squarecrop-user-guide.md
docs/schemas/: clip.v1.json  crop_preview_plan.v1.json  crop_run.v1.json  ingest_run.v1.json  (+1 more)
skills/: SOURCES.json
tests/: test_imports.py  test_profile_integration.py  test_profiles.py
(+48 files in other folders)
