[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "cosmos"
version = "0.1.0"
description = "Unified ingest + post-processing toolkit (COSM camera MP4 generation + general square crop)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "Polli Labs" }]
dependencies = [
  "questionary>=2.0.1",
  "tqdm>=4.67.1",
  "psutil>=6.1.0",
  "typer>=0.12.5",
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
  "types-PyYAML",
]

# Docs extra – used by the docs workflow (mkdocs build)
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5,<10",
  "mkdocstrings>=0.24,<1",
  "mkdocstrings-python>=1.10,<2"
]

[project.scripts]
cosmos = "cosmos.cli.cosmos_app:main"
squarecrop = "cosmos.cli.crop_cli:main"

[tool.hatch.build]
include = ["cosmos/**", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
src = ["cosmos"]
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","I","UP","S","B","A","T20","C90"]
ignore = []

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "-q"
minversion = "7.0"
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["cosmos"]
warn_unused_ignores = true
